aside jumping fix

--- a/public/app/css/components/aside.css
+++ b/public/app/css/components/aside.css
@@ -1,6 +1,7 @@
 .main-aside {
     position: sticky;
     top: var(--islandMargin);
+    will-change: top;
 }
 
 .main-aside--offset-top {
